# runegard

./: .gitignore  README.md  pyproject.toml  runegard-spec.md  skill.md
.githooks/: pre-push
assets/runbooks/: crashloop.md
demo/: deck.html  deck.md  demo_steps.md  run_demo.sh  setup_cluster.sh  speaker_script.md
docs/plans/: 2026-03-08-hackathon-deck-design.md  2026-03-08-runegard-design.md  2026-03-08-runegard-implementation.md
references/: k8s_common_patterns.md  learned_patterns.md
runegard/: .gitignore  Makefile  __init__.py  __main__.py  cli.py  executor.py  improver.py  k8s.py  parser.py  tracer.py
runegard/.githooks/: pre-commit
runegard/runegard/: models.py
tests/: test_executor.py  test_improver.py  test_parser.py  test_tracer.py
