[project]
name = "runegard"
version = "0.1.0"
description = "Autonomous Kubernetes runbook executor"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
    "ty",
]

[project.scripts]
runegard = "runegard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
